[package]
name = "streamlink"
version = "0.3.1"
authors = ["Oleksii Filonenko <brightone@protonmail.com>"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/filalex77/streamlink-rs"
documentation = "https://docs.rs/streamlink"
homepage = "https://crates.io/crates/streamlink"
description = """
Rust API (kinda) for the streamlink utility.
"""
keywords = ["streamlink", "youtube", "twitch"]
categories = ["api-bindings"]

[dependencies]
clap = "2.31"
console = "0.6.1"
error-chain = "0.11.0"
indicatif = "0.9.0"
serde = "1.0.55"
serde_derive = "1.0.55"
toml = "0.4"
url = "1.7.0"

[badges]
travis-ci = { repository = "filalex77/streamlink-rs" }

[package.metadata.docs.rs]
all-features = true