[package]
name = "streamlink"
version = "0.3.1"
authors = ["Oleksii Filonenko <brightone@protonmail.com>"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/filalex77/streamlink-rs"
documentation = "https://docs.rs/streamlink"
homepage = "https://crates.io/crates/streamlink"
description = """
Rust API (kinda) for the streamlink utility.
"""
keywords = ["streamlink", "youtube", "twitch"]
categories = ["api-bindings"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
ansi_term = "0.12"
clap = "2.33.0"
dirs = "2.0"
error-chain = "0.12.1"
indicatif = "0.11.0"
serde = "1.0.97"
serde_derive = "1.0.97"
toml = "0.5.1"
url = "1.7.2"

[[bin]]
name = "streamlink-rs"
path = "src/main.rs"

[badges]
travis-ci = { repository = "filalex77/streamlink-rs" }

